# sqp

./: .gitignore  Cargo.toml  README.md
sqp/: Cargo.toml
sqp/src/: binio.rs  header.rs  operations.rs  picture.rs
sqp/src/compression/: dct.rs  lossless.rs
sqp_tools/: Cargo.toml
sqp_tools/src/: main.rs  utils.rs
src/: binio.rs  compression.rs  header.rs  lib.rs  main.rs  operations.rs  picture.rs
src/compression/: dct.rs  lossless.rs  mod.rs
test_images/: test-lossless.sqp  test-lossy.sqp
