[package]
name = "sqp"
description = """
The squishiest image format!
"""
repository = "https://github.com/Dangoware/sqp"
license = "MIT OR Apache-2.0"
authors.workspace = true
version = "0.1.1"
edition = "2021"
categories = ["encoding", "compression", "graphics", "multimedia::images", "multimedia::encoding"]

[dependencies]
byteorder = "1.5"
integer-encoding = "4.0"
rayon = "1.10"
thiserror = "2.0"
