[package]
name = "sqp_tools"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "pnm", "qoi", "rayon", "tga", "tiff", "webp"] }
sqp = { path = "../sqp" }
text_io = "0.1"

[lints]
workspace = true
